@@ -118,24 +118,24 @@ public class  BuyerPageController {
       return "error/403";
     }
 
-    // 🔽 member 정보도 조회
+    // 1. member 먼저 조회
     Optional<Member> optionalMember = memberSVC.findById(memberId);
     if (optionalMember.isEmpty()) {
-      return "error/404";
+      return "error/403";
     }
     Member member = optionalMember.get();
 
+    // ✅ 핵심 포인트: 먼저 등록 (템플릿 파싱 전에 반드시 model에 존재해야 함)
+    model.addAttribute("member", member);
+
+    // 2. buyerPage 있으면 form 구성
     return buyerPageSVC.findByMemberId(memberId)
         .map(entity -> {
           BuyerPageUpdateForm form = new BuyerPageUpdateForm();
           form.setPageId(entity.getPageId());
           form.setMemberId(entity.getMemberId());
           form.setIntro(entity.getIntro());
-
-          // ✅ 수정된 닉네임 설정
           form.setNickname(entity.getNickname() != null ? entity.getNickname() : member.getNickname());
-
-          // 🔽 추가: member 정보로부터 tel 세팅
           form.setTel(member.getTel());
           form.setName(member.getName());
           form.setZonecode(member.getZonecode());
@@ -143,12 +143,10 @@ public class  BuyerPageController {
           form.setDetailAddress(member.getDetailAddress());
           form.setNotification(member.getNotification());
 
-
           model.addAttribute("form", form);
           return "mypage/buyerpage/editBuyerPage";
         })
         .orElseGet(() -> {
-          // 마이페이지 정보가 없을 경우 새로 생성
           BuyerPage newPage = new BuyerPage();
           newPage.setMemberId(memberId);
           newPage.setNickname(member.getNickname());
@@ -157,8 +155,6 @@ public class  BuyerPageController {
           BuyerPageUpdateForm form = new BuyerPageUpdateForm();
           form.setPageId(pageId);
           form.setMemberId(memberId);
-
-          // 🔽 추가: 새 폼에도 기본 member 정보 세팅
           form.setNickname(member.getNickname());
           form.setTel(member.getTel());
           form.setName(member.getName());
@@ -166,7 +162,6 @@ public class  BuyerPageController {
           form.setAddress(member.getAddress());
           form.setDetailAddress(member.getDetailAddress());
           form.setNotification(member.getNotification());
-
 
           model.addAttribute("form", form);
           return "mypage/buyerpage/editBuyerPage";
@@ -180,50 +175,46 @@ public class  BuyerPageController {
       @PathVariable Long memberId,
       @Valid @ModelAttribute("form") BuyerPageUpdateForm form,
       BindingResult bindingResult,
-      RedirectAttributes redirectAttributes
-  ) {
-    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-    log.info("🔐 Authentication: {}", auth);
-    log.info("🔐 Principal: {}", auth.getPrincipal());
+      RedirectAttributes redirectAttributes) {
 
-    Long loginMemberId = getLoginMemberId(); // 로그인 회원 ID 확인
-    log.info("🔍 로그인 사용자 ID = {}", loginMemberId);
-    log.info("📥 전달받은 form = {}", form);
-
-    if (!loginMemberId.equals(form.getMemberId())) {
-      log.warn("🚫 접근 차단: 로그인 ID({}) ≠ 폼의 회원ID({})", loginMemberId, form.getMemberId());
+    // ───────────────────────────
+    // 1. 권한·세션 검증
+    // ───────────────────────────
+    Long loginMemberId = getLoginMemberId();          // 로그인 사용자 ID
+    if (!loginMemberId.equals(memberId)) {            // URL 과 세션 ID 불일치
+      log.warn("🚫 접근 차단: loginId={} ≠ urlId={}", loginMemberId, memberId);
       return "error/403";
     }
 
+    // ───────────────────────────
+    // 2. 검증 오류 처리
+    // ───────────────────────────
     if (bindingResult.hasErrors()) {
-      log.warn("❌ 유효성 검증 실패:");
-      bindingResult.getFieldErrors().forEach(error ->
-          log.warn("    🔸 {}: {}", error.getField(), error.getDefaultMessage())
-      );
+      bindingResult.getFieldErrors()
+          .forEach(e -> log.warn("❌ {} : {}", e.getField(), e.getDefaultMessage()));
       return "mypage/buyerpage/editBuyerPage";
     }
 
-    // 닉네임 중복 검사
-    String currentNickname = buyerPageSVC.findByMemberId(memberId)
+    // ───────────────────────────
+    // 3. 닉네임 중복 검사
+    // ───────────────────────────
+    String currentNickname   = buyerPageSVC.findByMemberId(memberId)
         .map(BuyerPage::getNickname)
         .orElse(null);
     String requestedNickname = form.getNickname();
 
-    log.info("📌 현재 닉네임(DB): {}", currentNickname);
-    log.info("📌 요청된 닉네임: {}", requestedNickname);
-
-    if (requestedNickname != null && !requestedNickname.equals(currentNickname)) {
-      if (memberSVC.isExistNickname(requestedNickname)) {
-        log.warn("❌ 닉네임 중복: {}", requestedNickname);
-        bindingResult.rejectValue("nickname", "duplicate", "이미 사용 중인 닉네임입니다.");
-        return "mypage/buyerpage/editBuyerPage";
-      }
+    if (requestedNickname != null && !requestedNickname.equals(currentNickname) &&
+        memberSVC.isExistNickname(requestedNickname)) {
+      bindingResult.rejectValue("nickname", "duplicate", "이미 사용 중인 닉네임입니다.");
+      return "mypage/buyerpage/editBuyerPage";
     }
 
-    // BuyerPage 업데이트
+    // ───────────────────────────
+    // 4. BuyerPage 갱신
+    // ───────────────────────────
     BuyerPage buyerPage = new BuyerPage();
     buyerPage.setPageId(form.getPageId());
-    buyerPage.setMemberId(form.getMemberId());
+    buyerPage.setMemberId(memberId);
     buyerPage.setNickname(requestedNickname);
     buyerPage.setIntro(form.getIntro());
 
@@ -234,11 +225,11 @@ public class  BuyerPageController {
         log.error("이미지 처리 실패", e);
       }
     }
+    buyerPageSVC.update(form.getPageId(), buyerPage);
 
-    int updated = buyerPageSVC.update(form.getPageId(), buyerPage);
-    log.info("🔄 BuyerPage 수정 결과: {}건", updated);
-
-    // Member 정보 수정
+    // ───────────────────────────
+    // 5. Member 기본 정보 갱신
+    // ───────────────────────────
     Member member = new Member();
     member.setMemberId(memberId);
     member.setName(form.getName());
@@ -246,25 +237,21 @@ public class  BuyerPageController {
     member.setZonecode(form.getZonecode());
     member.setAddress(form.getAddress());
     member.setDetailAddress(form.getDetailAddress());
+    member.setNotification("Y".equals(form.getNotification()) ? "Y" : "N");
 
-    String noti = form.getNotification();
-    if (!"Y".equals(noti)) {
-      noti = "N";
-    }
-    member.setNotification(noti);
-
-    if (form.getPasswd() != null && !form.getPasswd().trim().isEmpty()) {
+    if (form.getPasswd() != null && !form.getPasswd().isBlank()) {
       member.setPasswd(form.getPasswd());
     }
-
     memberSVC.modify(memberId, member);
-    log.info("✅ Member 정보 수정 완료: {}", member);
 
-    // 🔽 수정 성공 메시지 전달
+    // ───────────────────────────
+    // 6. 완료 후 리다이렉트
+    // ───────────────────────────
     redirectAttributes.addFlashAttribute("msg", "마이페이지 정보가 성공적으로 수정되었습니다.");
-
     return "redirect:/mypage/buyer/" + memberId;
   }
+
+
   // ✅ 기본 진입 시 로그인한 회원의 마이페이지로 리다이렉트
   @GetMapping
   public String buyerMypageHome(Model model) {
